Refactor import tasks to be regular Callables, add regular Importer jersey resource to add or cancel imports. Implement gbif sync and continous importing as scheduled tasks that can be turned off (defualt)

--- a/colplus-task/pom.xml
+++ b/colplus-task/pom.xml
@@ -13,7 +13,7 @@
     <name>Clearinghouse task server (Task)</name>
 
     <properties>
-        <mainClass>org.col.task.TaskServer</mainClass>
+        <mainClass>org.col.TaskServer</mainClass>
     </properties>
 
     <dependencies>
