First part of ACEF import support

--- a/colplus-admin/pom.xml
+++ b/colplus-admin/pom.xml
@@ -107,6 +107,11 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+        </dependency>
+
         <!--
         You usually also want to make sure that XML library in use is Woodstox
         since it is not only faster than Stax implementation JDK provides,
