--- a/pom.xml
+++ b/pom.xml
@@ -34,22 +34,24 @@
         <!-- Library dependencies
             Check for available updates: mvn versions:display-dependency-updates
         -->
-        <commmons-lang.version>3.6</commmons-lang.version>
+        <citeproc.version>1.0.1</citeproc.version>
+        <commons-lang.version>3.7</commons-lang.version>
+        <commons-compress.version>1.10</commons-compress.version>
+        <commons-io.version>2.4</commons-io.version>
         <dropwizard.version>1.2.3</dropwizard.version>
         <dwc-api.version>1.18-SNAPSHOT</dwc-api.version>
         <dwca-io.version>1.33-SNAPSHOT</dwca-io.version>
         <fastutil.version>8.1.0</fastutil.version>
         <gbif-api.version>0.60</gbif-api.version>
-        <gbif-common.version>0.36</gbif-common.version>
         <gbif-parser.version>0.32</gbif-parser.version>
         <guava.version>23.5-jre</guava.version>
         <hikaricp.version>2.7.1</hikaricp.version>
         <hk2.version>2.5.0-b32</hk2.version>
-        <!--
-        make sure jackson matches dropwizards version
-        see Dropwizard BOM for help:
-        https://github.com/dropwizard/dropwizard/blob/v1.2.3/dropwizard-bom/pom.xml
-        -->
+        <!-- make sure http client matches dropwizards version, see Dropwizard BOM:
+             https://github.com/dropwizard/dropwizard/blob/v1.2.3/dropwizard-bom/pom.xml -->
+        <httpclient.version>4.5.3</httpclient.version>
+        <!-- make sure jackson matches dropwizards version, see Dropwizard BOM:
+             https://github.com/dropwizard/dropwizard/blob/v1.2.3/dropwizard-bom/pom.xml -->
         <jackson2.version>2.9.3</jackson2.version>
         <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
         <javers.version>3.7.5</javers.version>
@@ -70,7 +72,7 @@
         <postgresql-embedded.version>2.6</postgresql-embedded.version>
         <slf4j.version>1.7.25</slf4j.version>
         <validation-api.version>2.0.0.Final</validation-api.version>
-
+        <woodstox.version>4.4.1</woodstox.version>
         <!-- Maven plugin versions.
             Check for available updates: mvn versions:display-plugin-updates
         -->
@@ -224,6 +226,19 @@
                 <groupId>org.glassfish.jersey.ext.rx</groupId>
                 <artifactId>jersey-rx-client-java8</artifactId>
                 <version>${jersey.version}</version>
+            </dependency>
+
+            <!-- http client -->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- HK2 dependency injection - follow closely the version used by Jersey via Dropwizard -->
@@ -412,11 +427,33 @@
                 <version>${jackson2.version}</version>
             </dependency>
 
-            <!-- other -->
+            <!-- commons -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>${commmons-lang.version}</version>
+                <version>${commons-lang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-compress</artifactId>
+                <version>${commons-compress.version}</version>
+            </dependency>
+
+            <!-- other -->
+            <dependency>
+                <groupId>de.undercouch</groupId>
+                <artifactId>citeproc-java</artifactId>
+                <version>${citeproc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.woodstox</groupId>
+                <artifactId>woodstox-core-asl</artifactId>
+                <version>${woodstox.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
