--- a/colplus-api/pom.xml
+++ b/colplus-api/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.javers</groupId>
+            <artifactId>javers-core</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
