--- a/colplus-common/pom.xml
+++ b/colplus-common/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.javers</groupId>
+            <artifactId>javers-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
