--- a/colplus-admin/pom.xml
+++ b/colplus-admin/pom.xml
@@ -171,6 +171,12 @@
             <scope>test</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.univocity</groupId>
+            <artifactId>univocity-parsers</artifactId>
+            <version>2.5.9</version>
+        </dependency>
     </dependencies>
 
     <build>
