--- a/colplus-admin/pom.xml
+++ b/colplus-admin/pom.xml
@@ -181,6 +181,14 @@
 
     <build>
         <defaultGoal>compile exec:java</defaultGoal>
+
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>false</filtering>
+            </testResource>
+        </testResources>
+
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
