Add auto transliterations

--- a/colplus-admin/pom.xml
+++ b/colplus-admin/pom.xml
@@ -120,7 +120,12 @@
         <dependency>
             <groupId>org.codehaus.woodstox</groupId>
             <artifactId>stax2-api</artifactId>
-            <version>3.1.4</version>
+        </dependency>
+
+        <!-- unicode, transliterations -->
+        <dependency>
+            <groupId>com.ibm.icu</groupId>
+            <artifactId>icu4j</artifactId>
         </dependency>
 
         <!-- commons -->
