Add jackson time module to handle LocalDate nicely

--- a/pom.xml
+++ b/pom.xml
@@ -434,6 +434,11 @@
                 <artifactId>jackson-dataformat-csv</artifactId>
                 <version>${jackson2.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>${jackson2.version}</version>
+            </dependency>
 
             <!-- commons -->
             <dependency>
