--- a/colplus-common/pom.xml
+++ b/colplus-common/pom.xml
@@ -50,6 +50,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+        </dependency>
 
         <!-- other -->
         <dependency>
