Remove / add quotes for json serde inside queryparam decoding

--- a/colplus-common-dw/pom.xml
+++ b/colplus-common-dw/pom.xml
@@ -69,6 +69,13 @@
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
         </dependency>
+
+        <!-- TEST SCOPE -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
