ResolverStyle now configurable + lots of unit tests

--- a/colplus-parser/src/main/resources/fuzzy-date.properties
+++ b/colplus-parser/src/main/resources/fuzzy-date.properties
@@ -1,26 +1,17 @@
 # Default configuration for FuzzyDateParser
 #
-# We don't simply list all allowed patterns, because some 
-# aspects of the parsing may not be expressible purely through
-# the date pattern alone. For example whether or not to ignore
-# case when parsing (which is definitely not expressible
-# through the pattern). Therefore we configure the
-# FuzzyDateParser through a properties file. Currently the
-# only extra configuration option for a formatter, besides the
-# date pattern itself, is whether or not to ignore case.
 
 # Global settings. Can be overridden using property names
 # like "LocalDate.1.caseSensitive"
-
-# Ignore case in date strings
 caseSensitive=false
+resolverStyle=LENIENT
 
 # Either specify the name of a public static final
 # DateTimeFormatter instance on the DateTimeFormatter class:
 OffsetDateTime.0.name=ISO_DATE_TIME
 # Or specify a pattern:
 OffsetDateTime.1.pattern=uuuu-M-d'T'HH:mm[:ss]X
-OffsetDateTime.2.pattern=RFC_1123_DATE_TIME
+OffsetDateTime.2.name=RFC_1123_DATE_TIME
 
 LocalDateTime.0.name=ISO_LOCAL_DATE_TIME
 LocalDateTime.1.pattern=uuuu-M-d HH:mm[:ss]
