--- a/colplus-parser/src/main/resources/fuzzy-date.properties
+++ b/colplus-parser/src/main/resources/fuzzy-date.properties
@@ -1,31 +1,44 @@
 # Default configuration for FuzzyDateParser
 #
+# For each type of date time object, you must either specify a pattern
+# or the name of a public static final DateTimeFormatter field on the
+# DateTimeFormatter class (for example ISO_DATE_TIME). For patterns you
+# can optionally specify whether parsing should be done in a case 
+# sensitive manner (default false) and whether it should be done in
+# STRICT, SMART or LENIENT manner default LENIENT). You cannot do this
+# for named formatters. Their case-sensitivity and resolver style are
+# regarded as pertinent to their style of parsing. You can also
+# optionally specify (both for patterns and named formatters) a date
+# string filter, i.e. the fully-qualified name of a class implementing
+# DateStringFilter, which causes the parser to parse the filtered string
+# rather than the original date string.
 
-# Global settings. Can be overridden using property names
-# like "LocalDate.1.caseSensitive"
+# Global settings. Can be overridden using property names like
+# "LocalDate.2.caseSensitive"
 caseSensitive=false
 resolverStyle=LENIENT
 
-# Either specify the name of a public static final
-# DateTimeFormatter instance on the DateTimeFormatter class:
-OffsetDateTime.0.name=ISO_DATE_TIME
-# Or specify a pattern:
-OffsetDateTime.1.pattern=uuuu-M-d'T'HH:mm[:ss]X
-OffsetDateTime.2.name=RFC_1123_DATE_TIME
+OffsetDateTime.0.pattern=uuuu-M-d'T'HH:mm[:ss]X
+OffsetDateTime.1.pattern=uuuu/M/d'T'HH:mm[:ss]X
+OffsetDateTime.2.pattern=uuuu-M-d HH:mm[:ss]X
+OffsetDateTime.3.pattern=uuuu/M/d HH:mm[:ss]X
+OffsetDateTime.4.name=ISO_DATE_TIME
+OffsetDateTime.5.name=RFC_1123_DATE_TIME
 
-LocalDateTime.0.name=ISO_LOCAL_DATE_TIME
-LocalDateTime.1.pattern=uuuu-M-d HH:mm[:ss]
-LocalDateTime.2.pattern=uuuu/M/d HH:mm[:ss]
+LocalDateTime.0.pattern=uuuu-M-d HH:mm[:ss]
+LocalDateTime.1.pattern=uuuu/M/d HH:mm[:ss]
+LocalDateTime.2.name=ISO_LOCAL_DATE_TIME
 LocalDateTime.3.pattern=uuuuMMddHHmmss
 
-LocalDate.0.name=ISO_LOCAL_DATE
+LocalDate.0.pattern=uuuu-M-d
 LocalDate.1.pattern=uuuu/M/d
 LocalDate.2.pattern=uuuu M d
 LocalDate.3.pattern=uuuu-MMM-d
 LocalDate.4.pattern=uuuu/MMM/d
 LocalDate.5.pattern=uuuu MMM d
 LocalDate.6.pattern=uuuu年M月d日
-LocalDate.7.name=BASIC_ISO_DATE
+LocalDate.7.name=ISO_LOCAL_DATE
+LocalDate.8.name=BASIC_ISO_DATE
 
 YearMonth.0.pattern=uuuu-M
 YearMonth.1.pattern=uuuu/M
@@ -33,5 +46,7 @@ YearMonth.2.pattern=uuuu M
 YearMonth.3.pattern=uuuuM
 
 Year.0.pattern=uuuu
+Year.1.pattern=uuuu
+Year.1.filter=org.col.parser.YearExtractor
 
 
