--- a/colplus-parser/src/main/resources/fuzzy-date.properties
+++ b/colplus-parser/src/main/resources/fuzzy-date.properties
@@ -7,11 +7,11 @@
 # sensitive manner (default false) and whether it should be done in
 # STRICT, SMART or LENIENT manner default LENIENT). You cannot do this
 # for named formatters. Their case-sensitivity and resolver style are
-# regarded as pertinent to their style of parsing. You can also
-# optionally specify (both for patterns and named formatters) a date
-# string filter, i.e. the fully-qualified name of a class implementing
-# DateStringFilter, which causes the parser to parse the filtered string
-# rather than the original date string.
+# regarded as pertinent to their parsing logic. You can also optionally
+# specify (both for patterns and named formatters) a date string filter,
+# i.e. the fully-qualified name of a class implementing DateStringFilter,
+# which causes the parser to parse the filtered string rather than the
+# original date string.
 
 # Global settings. Can be overridden using property names like
 # "LocalDate.2.caseSensitive"
@@ -36,7 +36,7 @@ LocalDate.2.pattern=uuuu M d
 LocalDate.3.pattern=uuuu-MMM-d
 LocalDate.4.pattern=uuuu/MMM/d
 LocalDate.5.pattern=uuuu MMM d
-LocalDate.6.pattern=uuuu年M月d日
+LocalDate.6.pattern=uuuu?M?d?
 LocalDate.7.name=ISO_LOCAL_DATE
 LocalDate.8.name=BASIC_ISO_DATE
 
