--- a/colplus-parser/src/main/resources/fuzzy-date.properties
+++ b/colplus-parser/src/main/resources/fuzzy-date.properties
@@ -36,7 +36,7 @@ LocalDate.2.pattern=uuuu M d
 LocalDate.3.pattern=uuuu-MMM-d
 LocalDate.4.pattern=uuuu/MMM/d
 LocalDate.5.pattern=uuuu MMM d
-LocalDate.6.pattern=uuuu?M?d?
+LocalDate.6.pattern=uuuu年M月d日
 LocalDate.7.name=ISO_LOCAL_DATE
 LocalDate.8.name=BASIC_ISO_DATE
 
