Created test for anystek web service

--- a/colplus-common/pom.xml
+++ b/colplus-common/pom.xml
@@ -59,16 +59,9 @@
 			<groupId>de.undercouch</groupId>
 			<artifactId>citeproc-java</artifactId>
 		</dependency>
-		<!-- dependency>
-			<groupId>org.citationstyles</groupId>
-			<artifactId>styles</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.citationstyles</groupId>
-			<artifactId>locales</artifactId>
-			<version>1.0</version>
-		</dependency -->
+		<!-- dependency> <groupId>org.citationstyles</groupId> <artifactId>styles</artifactId> 
+			<version>1.0</version> </dependency> <dependency> <groupId>org.citationstyles</groupId> 
+			<artifactId>locales</artifactId> <version>1.0</version> </dependency -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
