--- a/pom.xml
+++ b/pom.xml
@@ -601,7 +601,10 @@
                         <forkCount>1</forkCount>
                         <reuseForks>false</reuseForks>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                        <argLine>-Xmx256m</argLine>
+                        <!--
+                            use default JVM settings
+                        <argLine>-Xms128m</argLine>
+                        -->
                         <runOrder>random</runOrder>
                     </configuration>
                 </plugin>
@@ -714,7 +717,10 @@
                         <forkCount>1</forkCount>
                         <reuseForks>false</reuseForks>
                         <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        <!--
+                        use default JVM settings
                         <argLine>-Xmx256m</argLine>
+                        -->
                         <runOrder>random</runOrder>
 
                         <includes>
