--- a/colplus-common/pom.xml
+++ b/colplus-common/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -59,9 +60,17 @@
       <groupId>de.undercouch</groupId>
       <artifactId>citeproc-java</artifactId>
     </dependency>
-    <!-- dependency> <groupId>org.citationstyles</groupId> <artifactId>styles</artifactId> 
-      <version>1.0</version> </dependency> <dependency> <groupId>org.citationstyles</groupId> 
-      <artifactId>locales</artifactId> <version>1.0</version> </dependency -->
+    <dependency>
+      <groupId>org.citationstyles</groupId>
+      <artifactId>styles</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.citationstyles</groupId>
+      <artifactId>locales</artifactId>
+      <version>1.0</version>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
