--- a/colplus-admin/pom.xml
+++ b/colplus-admin/pom.xml
@@ -77,11 +77,7 @@
             <artifactId>colplus-dao</artifactId>
         </dependency>
 
-        <!-- neo4j, mapdb & kryo -->
-        <dependency>
-            <groupId>org.mapdb</groupId>
-            <artifactId>mapdb</artifactId>
-        </dependency>
+        <!-- neo4j -->
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
@@ -107,8 +103,12 @@
             <artifactId>graph-algorithms-algo</artifactId>
         </dependency>
 
-        <!-- we use kryo to serialize data into binary which is > 10 times faster than jackson even with
-          smile -->
+        <!-- mapdb & kryo -->
+        <!-- we use kryo to serialize data into binary which is > 10 times faster than jackson even with smile -->
+        <dependency>
+            <groupId>org.mapdb</groupId>
+            <artifactId>mapdb</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.esotericsoftware</groupId>
             <artifactId>kryo</artifactId>
@@ -117,6 +117,8 @@
             <groupId>de.javakaffee</groupId>
             <artifactId>kryo-serializers</artifactId>
         </dependency>
+
+        <!-- collections & CSV -->
         <dependency>
             <groupId>it.unimi.dsi</groupId>
             <artifactId>fastutil</artifactId>
