--- a/colplus-common/pom.xml
+++ b/colplus-common/pom.xml
@@ -26,6 +26,26 @@
       <groupId>org.col</groupId>
       <artifactId>colplus-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.col</groupId>
+      <artifactId>colplus-api</artifactId>
+      <classifier>tests</classifier>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- mapdb & kryo -->
+    <dependency>
+      <groupId>org.mapdb</groupId>
+      <artifactId>mapdb</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.esotericsoftware</groupId>
+      <artifactId>kryo</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>de.javakaffee</groupId>
+      <artifactId>kryo-serializers</artifactId>
+    </dependency>
 
     <!-- JACKSON2 -->
     <dependency>
