Create new dw-testing module that contains a DropwizardPgAppRule with all its trasnsitive dependencies needed to run a dropwizard application with a postgres mybatis module both in embedded mode or with an external db

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-*.iml
-target
-.idea
+**/*.iml
+**/target
+**/.idea
 colplus-admin/graphs/
 
 
-/.project
-/.classpath
-/.settings/
-/bin/
+**/.project
+**/.classpath
+**/.settings/
+**/bin/
