--- a/colplus-admin/pom.xml
+++ b/colplus-admin/pom.xml
@@ -66,7 +66,7 @@
         </dependency>
         <dependency>
             <groupId>org.col</groupId>
-            <artifactId>colplus-common-dw</artifactId>
+            <artifactId>colplus-dw</artifactId>
         </dependency>
         <dependency>
             <groupId>org.col</groupId>
@@ -185,8 +185,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>ru.yandex.qatools.embed</groupId>
-            <artifactId>postgresql-embedded</artifactId>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.col</groupId>
+            <artifactId>colplus-api</artifactId>
+            <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -197,18 +203,7 @@
         </dependency>
         <dependency>
             <groupId>org.col</groupId>
-            <artifactId>colplus-api</artifactId>
-            <classifier>tests</classifier>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-testing</artifactId>
+            <artifactId>colplus-dw-testing</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
