--- a/colplus-dw/pom.xml
+++ b/colplus-dw/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>colplus-common-dw</artifactId>
+    <artifactId>colplus-dw</artifactId>
 
     <name>Clearinghouse Common Dropwizard Code</name>
 
