--- a/colplus-ws/pom.xml
+++ b/colplus-ws/pom.xml
@@ -68,7 +68,7 @@
         </dependency>
         <dependency>
             <groupId>org.col</groupId>
-            <artifactId>colplus-common-dw</artifactId>
+            <artifactId>colplus-dw</artifactId>
         </dependency>
         <dependency>
             <groupId>org.col</groupId>
@@ -127,12 +127,12 @@
         </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-testing</artifactId>
+            <artifactId>dropwizard-client</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-client</artifactId>
+            <groupId>org.col</groupId>
+            <artifactId>colplus-dw-testing</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
