--- a/colplus-dw-testing/src/test/resources/config-test.yaml
+++ b/colplus-dw-testing/src/test/resources/config-test.yaml
@@ -11,4 +11,9 @@ logging:
     "org.col": DEBUG
   appenders:
     - type: console
-
+db:
+  host: "${db.host}"
+  port: 5432
+  database: ${db.database}
+  user: ${db.user}
+  password: ${db.password}
