some initial es stubs

--- a/colplus-admin/pom.xml
+++ b/colplus-admin/pom.xml
@@ -117,6 +117,17 @@
             <groupId>de.javakaffee</groupId>
             <artifactId>kryo-serializers</artifactId>
         </dependency>
+        
+        
+        <dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>transport</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+		</dependency>
+        
 
         <!-- collections & CSV -->
         <dependency>
