--- a/colplus-dw-testing/src/test/resources/config-test.yaml
+++ b/colplus-dw-testing/src/test/resources/config-test.yaml
@@ -17,3 +17,7 @@ db:
   database: ${db.database}
   user: ${db.user}
   password: ${db.password}
+es:
+  host: ${es.host}
+  port: 9300
+  cluster: ${es.cluster}
