--- a/colplus-dw/pom.xml
+++ b/colplus-dw/pom.xml
@@ -56,6 +56,18 @@
             <artifactId>hk2-api</artifactId>
             <version>2.5.0-b32</version>
         </dependency>
+        
+               
+        
+        <dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>transport</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+		</dependency>
+        
 
         <!-- DB -->
         <dependency>
