--- a/colplus-dao/src/test/resources/es-test.yaml
+++ b/colplus-dao/src/test/resources/es-test.yaml
@@ -2,4 +2,4 @@ host: ${es.host}
 port: 9300
 cluster: ${es.cluster}
 indices:
-  - {name: name_usaged_it, modelClass: NameUsage, numShards: 1, numReplicas: 0}
+  - {name: name_usaged_it, modelClass: Taxon, numShards: 1, numReplicas: 0}
