--- a/colplus-dao/pom.xml
+++ b/colplus-dao/pom.xml
@@ -93,13 +93,14 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.elasticsearch.client</groupId>
-			<artifactId>transport</artifactId>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>elasticsearch-rest-client</artifactId>
 		</dependency>
+
 		<!-- Also needed when depending on Elasticsearch: -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
