--- a/colplus-admin/pom.xml
+++ b/colplus-admin/pom.xml
@@ -160,6 +160,10 @@
 
         <!-- other -->
         <dependency>
+            <groupId>org.hashids</groupId>
+            <artifactId>hashids</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
