--- a/colplus-admin/pom.xml
+++ b/colplus-admin/pom.xml
@@ -119,14 +119,14 @@
         </dependency>
         
         
-        <dependency>
+        <!--dependency>
 			<groupId>org.elasticsearch.client</groupId>
 			<artifactId>transport</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-		</dependency>
+		</dependency-->
         
 
         <!-- collections & CSV -->
