--- a/colplus-dw/pom.xml
+++ b/colplus-dw/pom.xml
@@ -59,14 +59,14 @@
         
                
         
-        <dependency>
+        <!--dependency>
 			<groupId>org.elasticsearch.client</groupId>
 			<artifactId>transport</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-		</dependency>
+		</dependency-->
         
 
         <!-- DB -->
