Now with embedded ES

--- a/colplus-admin/src/test/resources/config-test.yaml
+++ b/colplus-admin/src/test/resources/config-test.yaml
@@ -29,3 +29,8 @@ client:
   maxConnectionsPerRoute: 16
   keepAlive: 0ms
   retries: 1
+es:
+  hosts: localhost
+  ports: 9200
+  nameUsage:
+    modelClass: org.col.es.model.EsNameUsage
