--- a/colplus-dao/pom.xml
+++ b/colplus-dao/pom.xml
@@ -127,6 +127,12 @@
 			<artifactId>logback-classic</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>pl.allegro.tech</groupId>
+			<artifactId>embedded-elasticsearch</artifactId>
+			<version>2.7.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
