--- a/colplus-dao/src/test/resources/es-test.yaml
+++ b/colplus-dao/src/test/resources/es-test.yaml
@@ -1,5 +1,7 @@
+# Comma-separated string of hosts
 hosts: ${es.hosts}
-ports: ${es.ports}
+# Comma-separated string of ports (defaults to 9200)
+ports:
 nameUsage:
   modelClass: org.col.es.model.EsNameUsage
   numShards: 1
