--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,13 @@
 		<!-- Library dependencies Check for available updates: mvn versions:display-dependency-updates We make 
 			use of the Dropwizard BOM (Bill of materials) to manage versions for the major libraries which also imports 
 			the BOM for jersey and jackson. Before adding a specific version here make sure it is not already covered 
-			by these BOMs (use the right versions): Main Dropwizard BOM: https://github.com/dropwizard/dropwizard/blob/v1.3.5/dropwizard-bom/pom.xml 
-			Which also imports the Jersey BOM: https://github.com/jersey/jersey/blob/2.25.1/bom/pom.xml and Jackson 
-			BOM: https://github.com/FasterXML/jackson-bom/blob/jackson-bom-2.9.6/pom.xml These BOMs manage dependency 
+			by these BOMs (use the right versions):
+
+			Main Dropwizard BOM: https://github.com/dropwizard/dropwizard/blob/v1.3.5/dropwizard-bom/pom.xml
+			Which also imports the Jersey BOM: https://github.com/jersey/jersey/blob/2.25.1/bom/pom.xml
+			and Jackson BOM: https://github.com/FasterXML/jackson-bom/blob/jackson-bom-2.9.6/pom.xml
+
+			These BOMs manage dependency
 			versions for many things including: commons-lang3, guava, jersey, commons-text, servlet api, httpclient, 
 			liquibase, freemarker, jetty, jackson, metrics, etc. -->
 		<citeproc.version>1.0.1</citeproc.version>
