Add unique sectorr constraint, fixes #166. Start exposing sectors in the tree

--- a/colplus-ws/pom.xml
+++ b/colplus-ws/pom.xml
@@ -91,6 +91,10 @@
 
         <!-- Other -->
         <dependency>
+            <groupId>com.github.frictionlessdata</groupId>
+            <artifactId>tableschema-java</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
